syntax = "proto3";

package proto;

//option java_package = "com.hedera...";
option java_multiple_files = true;

message MessageThread {
    string threadName = 1;
}

message MessageOnThread {
    string threadName = 1;
    string message = 2;
}

message SimpleMessage {
    oneof data {
        MessageThread newMessageThread = 1;
        MessageOnThread messageOnThread = 2;
    }
}
        